--- a/data/index.html
+++ b/data/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Ensven Control Panel</title>
+<title>ESP32 Control Panel</title>
 <link rel="stylesheet" href="notifications.css">
 <script src="notifications.js"></script>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -1623,7 +1623,7 @@
     <div id="homeScreen" style="display: none;">
         <header class="w3-top w3-bar w3-theme w3-center">
             <div class="w3-cell-row wa">
-                <h2 class="w3-bar-item">Ensven Control Panel</h2>
+                <h2 class="w3-bar-item">ESP32 Control Panel</h2>
                 <!-- <h4 class="w3-display-right top-btn">Device</h4> -->
             </div>
         </header>
